logut api done
